# CMPT433_project

./: CMakeLists.txt  README.md  demo_gps.txt  demo_locationData.txt  setup_env.sh
R5/: CMakeLists.txt  load_r5_mcu.sh
R5/boards/: beagley_ai_j722s_mcu_r5f0_0.overlay
R5/src/: main.c  sharedDataLayout.h
app/: CMakeLists.txt
app/include/: LED.h  ai_api.h  neopixel.h  parking.h  roadTracker.h  sharedDataLayout.h  sleep_and_timer.h  speedLed.h  speedLimitAPI.h  speedLimitLED.h  streetAPI.h  updateLcd.h
app/src/: LED.c  ai_api.c  ai_api.py  api.c  main.c  my_speech.py  neopixel.c  parking.c  roadTracker.c  sleep_and_timer.c  speedLed.c  speedLimitAPI.c  speedLimitLED.c  streetAPI.c  updateLcd.c
hal/: CMakeLists.txt
hal/include/hal/: GPS.h  accelerometer.h  gpio.h  i2c.h  joystick.h  lcd.h  led.h  mic.h  microphone.h  rotary_state.h
hal/src/: GPS.c  accelerometer.c  api.c  gpio.c  i2c.c  joystick.c  lcd.c  led.c  mic.c  microphone.c  rotary_state.c  speech.py
lcd/lib/Config/: DEV_Config.c
